<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textNameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_location_title"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="left"/>

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="13sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:gravity="left"/>

        <TextView
            android:id="@+id/textTypeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_location_title"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="left"/>

        <TextView
            android:id="@+id/textType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="13sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:gravity="left"/>

        <TextView
            android:id="@+id/textDimensionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dimension_ilocation_title"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="left"/>

        <TextView
            android:id="@+id/textDimension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dimension"
            android:textSize="13sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:gravity="left"/>

        <TextView
            android:id="@+id/textListCharacterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_character_location_title"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="left"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCharacter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textCreatedTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_location_created_title"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="left"/>

        <TextView
            android:id="@+id/textCreated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/created"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:paddingStart="15dp"
            android:gravity="left"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>