<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvEpisode"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    app:cardCornerRadius="7dp"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/grey_light">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textNameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_episode_title"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:gravity="left"/>

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:gravity="left"/>

        <TextView
            android:id="@+id/textCodeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code_episode_title"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:gravity="left"/>

        <TextView
            android:id="@+id/textCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code_episode"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:gravity="left"/>

        <TextView
            android:id="@+id/textDateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/air_episode_title"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:gravity="left"/>
        <TextView
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:gravity="left"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
