<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvCharacter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="7dp"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/grey_light">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:gravity="left"/>
        <TextView
            android:id="@+id/textSpecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/species"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:gravity="left"/>
        <TextView
            android:id="@+id/textStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:gravity="left"/>
        <TextView
            android:id="@+id/textGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:gravity="left"/>
        <ImageView
            android:id="@+id/imageCharacter"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:gravity="left"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/rick_morty_splash"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
